# d4csv

./: .gitignore  Cargo.toml  README.md  index.html
src/: app.rs  context.rs  main.rs  report.rs  sale.rs  ticket.rs  wrapper.rs
src/report/: sfields.rs  tfields.rs
src/sale/: ambiguity.rs  kind.rs  plus.rs  price_deriving.rs  seller.rs
src/ticket/: batch.rs  batchnum.rs
